--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
 Babel==2.12.1
-customtkinter==5.1.3  
-darkdetect==0.8.0     
-fillpdf==0.7.2        
+customtkinter==5.1.3
+darkdetect==0.8.0
+et-xmlfile==1.1.0
+fillpdf==0.7.2
 numpy==1.24.3
+openpyxl==3.1.2
 pandas==2.0.1
-pdf2image==1.16.3     
+pdf2image==1.16.3
 pdfrw2==0.5.0
 Pillow==9.5.0
-PyMuPDF==1.22.3       
+PyMuPDF==1.22.3
 python-dateutil==2.8.2
 pytz==2023.3
 six==1.16.0
-tkcalendar==1.6.1     
-tzdata==2023.3    
+tkcalendar==1.6.1
+tzdata==2023.3
