added new user boolean and save path if statement

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,8 @@
+[new_user]
+new_user = True
+
 [save path]
-student_record_path = C:\Users\brend\Desktop
+student_record_path =
 
 [style]
 theme = light_theme
